# visualization

./: .gitignore  CMakeLists.txt  Makefile  README.md  cubic_flat_plate_control_points.txt  cubic_flat_plate_knots.txt  data.json  data.txt  film_substrate_mesh_f_1_hex_1.vtu  flat_plate_bspline_3_C1_1_D1_100_p_1.0.vtu  quadratic_bspline_example_10x10x4.vtu  requirements.txt
examples/: test_bsplines.py  unittest_helpers.py
src/: bsplineData.h  fileInput.cpp  fileInput.h  main.cpp  parser.py  test.cpp  test.py
src/bspline/: CMakeLists.txt  Makefile  README  a.out  brackets.cpp  geometry  geometry.cpp  geometry.h  interface.txt  objdump-out.txt  tests  tests.cpp
tests/: test_bsplines.py
tests/bspline_src/: bspline_eval.py
